# COMBINE-harmonizer

./: .gitignore  Dictionary_HIE_clinical_variables.xlsx  LICENSE  README.md  config.tmpl.yaml  pyproject.toml  requirements-dev.txt  utils.py  zz-exec.ipynb
.cc/: README.md  requirements-dev.txt
Analysis/: 00-check-basic-info.ipynb  10-inverse-flatten.ipynb  10-numeric-flatten.ipynb  11-correlation-coefficient-R.ipynb  11-correlation-coefficient.ipynb  20-distribution.ipynb  21-MRI-Score-distribution.ipynb  22-MRI-Score0-distribution.ipynb
COMBINE_harmonizer/: __init__.py  cfg.py  constants.py  exec_ipynb.py  plot.py  utils_corr.py  utils_data_dict.py  utils_datetime.py  utils_flatten.py  utils_flatten_index.py  utils_logit.py  utils_lr.py  utils_mapping.py  utils_mean_max.py  utils_process.py  utils_redcap.py  utils_sarnat.py  utils_types.py  utils_values.py
Dictionary/: 00-check-data-dict-dup-main.ipynb  01-check-data-dict-dup-follow-up.ipynb  02-check-data-dict-dup-analysis.ipynb
LH/: 00-sas-to-csv-R.ipynb  00-spreadsheet-variables.ipynb  01-normalize.ipynb  02-normalize-values.ipynb  03-spreadsheet-variables-follow-up.ipynb  04-normalize-follow-up.ipynb  05-normalize-values-follow-up.ipynb  06-spreadsheet-variables-derived-data.ipynb  07-normalize-derived-data.ipynb  08-normalize-values-derived-data.ipynb
Merge/: 00-normalize-merge-values.ipynb  01-total-modified-sarnat-scores.ipynb  02-mri-scores.ipynb  03-perinatal-sentinel-event.ipynb  04-disability-death.ipynb  05-emergency-csection.ipynb  06-apgar-scores.ipynb  07-to-publish.ipynb  99-to-excel.ipynb  (+1 more)
(+166 files in other folders)
